[gd_scene load_steps=12 format=2]

[ext_resource path="res://Coin.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/art/Black_Circle.png" type="Texture" id=2]
[ext_resource path="res://QPF_assets/art/White_Circle.png" type="Texture" id=3]
[ext_resource path="res://QPF_assets/art/Hadamard_black_2.png" type="Texture" id=4]
[ext_resource path="res://QPF_assets/art/Hadamard_white_1.png" type="Texture" id=5]
[ext_resource path="res://QPF_assets/art/Hadamard_black_1.png" type="Texture" id=6]
[ext_resource path="res://QPF_assets/art/Hadamard_white_2.png" type="Texture" id=7]
[ext_resource path="res://QPF_assets/music/flip.ogg" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.2751, 52.3115 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 66.0184, 69.4161 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "black",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "white",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "hadamard_black_2",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "hadamard_white_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "hadamard_black_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "hadamard_white_2",
"speed": 0.0
} ]

[node name="Coin" type="RigidBody2D" groups=[
"Coins",
]]
position = Vector2( 344.832, 682.334 )
collision_layer = 0
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape1" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AreaTocable" type="Area2D" parent="."]
monitorable = false
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2" type="CollisionShape2D" parent="AreaTocable"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
z_index = -20
frames = SubResource( 3 )
animation = "hadamard_black_1"

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 0.242675, 0.487833 )
scale = Vector2( 5.14913, 5.209 )

[node name="TimerCPUFlips" type="Timer" parent="."]

[node name="FlipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0
bus = "SFX"

[connection signal="input_event" from="AreaTocable" to="." method="_on_AreaTocable_input_event"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_exit_screen"]
